[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/UI.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/images/important/ui/res/Default.tres" type="StyleBox" id=2]
[ext_resource path="res://src/scripts/ui/dialogue/Dialogue.gd" type="Script" id=3]
[ext_resource path="res://assets/images/important/indicator.png" type="Texture" id=4]
[ext_resource path="res://scenes/subscenes/ui/Cursor.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "press z"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 524, 154 ), Vector2( 524, 144 ), Vector2( 524, 154 ) ]
}

[node name="Dialogue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="DialogueLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="DialoguePanel" type="Panel" parent="DialogueLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -278.0
margin_top = 12.0
margin_right = 278.0
margin_bottom = 198.0
custom_styles/panel = ExtResource( 2 )

[node name="Name" type="Label" parent="DialogueLayer/DialoguePanel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 56.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
text = "LeaderJord:"

[node name="Text" type="RichTextLabel" parent="DialogueLayer/DialoguePanel"]
margin_left = 16.0
margin_top = 40.0
margin_right = 516.0
margin_bottom = 170.0
bbcode_enabled = true
bbcode_text = "Hello there!"
text = "Hello there!"

[node name="Indicator" type="TextureRect" parent="DialogueLayer/DialoguePanel"]
margin_left = 524.0
margin_top = 154.0
margin_right = 540.0
margin_bottom = 170.0
texture = ExtResource( 4 )
expand = true

[node name="Anim" type="AnimationPlayer" parent="DialogueLayer/DialoguePanel/Indicator"]
"anims/press z" = SubResource( 1 )

[node name="Timer" type="Timer" parent="DialogueLayer/DialoguePanel"]

[node name="Choices" type="Panel" parent="DialogueLayer/DialoguePanel"]
margin_left = 283.0
margin_top = -196.0
margin_right = 556.0
margin_bottom = -5.0
custom_styles/panel = ExtResource( 2 )

[node name="ChoiceCont" type="VBoxContainer" parent="DialogueLayer/DialoguePanel/Choices"]
margin_left = 32.0
margin_top = 16.0
margin_right = 72.0
margin_bottom = 56.0
custom_constants/separation = 8

[node name="Yes" type="Label" parent="DialogueLayer/DialoguePanel/Choices/ChoiceCont"]
margin_right = 48.0
margin_bottom = 16.0
text = "Yes"

[node name="Cursor" parent="DialogueLayer/DialoguePanel/Choices" instance=ExtResource( 5 )]
margin_left = 12.0
margin_top = 16.0
margin_right = 28.0
margin_bottom = 32.0
menu_parent_path = NodePath("../ChoiceCont")
offset = Vector2( -20, 0 )
